# py-ig2raindrop-cli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/ig2raindrop_cli/: __init__.py  cli.py  config.py  instagram.py  instagram_api.py  models.py  raindrop.py
tests/: test_cli.py  test_config.py  test_instagram.py  test_instagram_api.py  test_models.py  test_raindrop.py
