[project]
name = "ig2raindrop-cli"
version = "0.1.0"
description = "CLI tool to import Instagram saved posts into Raindrop.io"
authors = [
    {name = "Lukas Wolfsteiner",email = "lukas@wolfsteiner.media"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "instagrapi>=2.1.0",
    "tomli-w>=1.2.0",
]
license = {file = "LICENSE"}
keywords = ["instagram", "raindrop", "bookmarks", "sync", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/dotWee/py-ig2raindrop-cli"
Repository = "https://github.com/dotWee/py-ig2raindrop-cli"
Issues = "https://github.com/dotWee/py-ig2raindrop-cli/issues"

[project.scripts]
ig2raindrop = "ig2raindrop_cli.cli:app"

[tool.poetry]
packages = [{include = "ig2raindrop_cli", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
pytest-httpx = ">=0.30.0"
ty = ">=0.0.15"
ruff = "^0.15.0"

[tool.ruff]
line-length = 100
# Python version is inferred from requires-python in [project]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["ig2raindrop_cli"]

[tool.coverage.run]
source = ["src/ig2raindrop_cli"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=ig2raindrop_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["src"]
reportMissingTypeStubs = false
reportMissingModuleSource = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
